Production mode for React, render to element

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <body>
+    <div id='hello'></div>
+    <!-- It is *quite* important to add this after whole DOM -->
     <script src="bundle.js"></script>
   </body>
 </html>
