index.html hot reload

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <body>
     <div id='hello'></div>
+    <p>This is just static markup!</p>
     <!-- It is *quite* important to add this after whole DOM -->
     <script src="bundle.js"></script>
   </body>
